# roboapp

./: .gitmodules  README.md  compose.yml  config.toml  mise.toml  pixi.toml
.github/: lidar_system.check.yaml
.github/actions/cpp/: action.yaml
.github/actions/mise/: action.yaml
.github/actions/nodejs/: action.yaml
.github/actions/pixi/: action.yaml
.github/actions/python/: action.yaml
.github/actions/rust/: action.yaml
.github/workflows/: configurator.yaml  lidar_system.check.yaml  main_camera_system_cache.yaml  main_camera_system_check.yaml  uart_bridge_check.yaml  ui_system_cache.yaml  ui_system_check.yaml
.mise/tasks/: deps
collision_avoidance/cpp/: CMakeLists.txt  test_collision_avoidance.cpp
collision_avoidance/scripts/: obstacle_avoidance_simulator.py
configurator/: README.md  config.py  mise.toml  pyproject.toml
configurator/src/configurator/: check.py  config.py  main.py  systemd.py
configurator/template/systemd/: roboapp-lidar-processor.service.tmpl  roboapp-lidar-sender.service.tmpl  roboapp-main-camera-system.service.tmpl  roboapp-uart-bridge.service.tmpl  roboapp-ui-system.service.tmpl
configurator/test/: test_config_parse.py  test_lidar_config.py  test_read_sample.py
configurator/test/resources/: camera_config_device_width.toml  config_sample.toml  global_config_zenoh_prefix.toml  gui_config_host.toml  lidar_config_robot_width.toml  lidar_device_config_random.toml  lidar_device_config_random_rotate.toml  uart_device.toml
database/prometheus/: prometheus.yml
image_receiver_sample_cpp/: CMakeLists.txt  README.md  mise.toml
image_receiver_sample_cpp/src/: main.cpp
image_receiver_sample_py/: README.md  mise.toml  pyproject.toml
image_receiver_sample_py/src/image_receiver_sample_py/: __init__.py  sub.py  switch.py
lidar_system/: .gitignore  CMakeLists.txt  README.md  justfile  mise.toml
lidar_system/docs/image/: rplidar.avif
lidar_system/include/: arc_intersection.hpp  config.hpp  degree2position.hpp  visualizer.hpp
lidar_system/include/collision_avoidance/: collision_avoidance.hpp
lidar_system/include/lidar_device/: mock_lidar.hpp  random_lidar.hpp  rplidar_wrapper.hpp
lidar_system/include/lidar_types/: lidar_data.hpp  lidar_metadata.hpp
lidar_system/include/visualizer/: generate_color.hpp  visualizer.hpp
lidar_system/scripts/: obstacle_avoidance_simulator.py
lidar_system/src/: processor.cpp  sender.cpp  viewer.cpp
lidar_system/src/collision_avoidance/: collision_avoidance.cpp
lidar_system/src/lidar_device/: rplidar_wrapper.cpp
lidar_system/src/lidar_types/: lidar_data.cpp  lidar_metadata.cpp
lidar_system/src/visualizer/: visualizer.cpp
lidar_system/test/: test_collision_avoidance.cpp  test_config.cpp  test_degree2position.cpp
lidar_system/test/resources/: lidar_config_default.toml  lidar_config_influence_range.toml  lidar_config_repulsive_gain.toml  lidar_config_robot_length.toml  lidar_config_robot_width.toml  lidar_device_config_dummy.toml  lidar_device_config_random.toml  lidar_device_config_random_rotate.toml  lidar_device_config_rplidar_with_device.toml  lidar_device_config_rplidar_with_no_device.toml
main_camera_system/: Cargo.toml  README.md  deps.sh  mise.toml
main_camera_system/src/: camera_wrapper.rs  config.rs  lib.rs  main.rs  messages.rs
main_camera_system/test/resources/: camera_config_device_width.toml  camera_config_no_dev.toml  global_config_websocket_port.toml  global_config_zenoh_prefix.toml
main_camera_system/tests/testdata/: camera_config_no_dev.toml
uart_bridge/: README.md  build.sh  deps.sh  mise.toml  pyproject.toml
uart_bridge/example/: command.py  damagepanel.py  lidar.py  state.py
uart_bridge/example/cam_switch/: pub_cs.py  sub_cs.py
uart_bridge/example/damagepanel/: put_dp.py  sub.py  sub_dp.py
uart_bridge/example/disk_message/: pub_dm.py  sub_dm.py
uart_bridge/example/flap_message/: pub_fm.py  sub_fm.py
uart_bridge/example/force_vector/: pub_fv.py  sub_fv.py
uart_bridge/example/robot_state/: pub_rs.py
uart_bridge/example/robotstate/: pub_rs.py  sub_rs.py
uart_bridge/src/uart_bridge/: __init__.py  main.py
uart_bridge/src/uart_bridge/application/: application.py  interfaces.py
uart_bridge/src/uart_bridge/domain/: config.py  messages.py  transmitter_message.py  transmitter_messages.py  zenoh_messages.py
uart_bridge/src/uart_bridge/infra/: serial_robot_driver.py  zenoh_transmitter.py
uart_bridge/test/domain/: test_config.py
uart_bridge/test/resources/: empty.toml  global_config_empty.toml  global_config_websocket_port.toml  read_sym.toml  uart_device.toml
ui_system/: .prettierignore  .prettierrc  README.md  build.sh  deps.sh  eslint.config.ts  mise.toml  package.json  pnpm-lock.yaml  prettier.config.ts  svelte.config.js  vite.config.js
ui_system/src-tauri/: Cargo.toml  tauri.conf.json
ui_system/src-tauri/src/: config.rs  lib.rs  main.rs  msg.rs  zenoh_client.rs
ui_system/src-tauri/test/resources/: global_config_empty.toml  global_config_websocket_port.toml  global_config_zenoh_prefix.toml  gui_config_empty.toml  gui_config_host.toml
ui_system/src/lib/components/: Background.svelte  Disks.svelte  ImageViewer.svelte  Parameters.svelte  RobotStatus.svelte  TextBox.svelte
ui_system/src/lib/store/: cameraid.svelte.ts  disks.svelte.ts  flap.svelte.ts  lidar.svelte.ts  robotstatus.svelte.ts
ui_system/src/lib/types/: robot_status.ts  zenoh_message.ts
ui_system/src/lib/values/: component_variable.ts  image.ts
ui_system/src/lib/variables/: gui_size.ts
ui_system/src/routes/: +page.svelte
zenoh-cam/: Cargo.toml
zenoh-cam/src/: main.rs
