[project]
name = "configurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "taskipy>=1.14.1",
]

[tool.lint.ruff]
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.taskipy.tasks]
check = "mypy . --strict"
lint = "ruff check ."
format = "ruff check . --fix && ruff format ."
