[project]
name = "configurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
]
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" },
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "taskipy>=1.14.1",
]

[tool.lint.ruff]
select = [
    "E",
    "F",
    "I",
    "W",
]

[tool.taskipy.tasks]
check = "mypy . --strict"
lint = "ruff check ."
format = "ruff check . --fix && ruff format ."
test = "pytest --cov --cov-report=html test/"
