[package]
name = "main-camera-system"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh = "1.4.0"
v4l = "0.14.0"
tokio = "1.46.0"
turbojpeg = "1.3.3"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
tungstenite = "0.27.0"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
