[package]
name = "main-camera-system"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
turbojpeg = "1.3.3"
v4l = "0.14.0"
zenoh = "1.4.0"
